<resources>
    <string name="app_name">HelloWorld</string>

    <!-- login_activity -->
    <string name="activity_login_et_hint_username">用户名</string>
    <string name="activity_login_tv_register">注册</string>
    <string name="activity_login_tv_login">登陆</string>

    <!-- main_activity -->
    <string name="activity_main_tv_logout">退出</string>

    <string name="steph_layout_and_widget_activity_tv_text_one">第一个TV</string>
    <string name="steph_layout_and_widget_activity_tv_text_two">第二个TV</string>
    <string name="steph_layout_and_widget_activity_tv_text_three">第三个TV</string>
    <string name="news_title">杭州新闻</string>
    <string name="local_news">LOCAL NEWS</string>
    <string name="change_city">切换城市</string>
    <string name="news">新闻内容省略</string>
    <string name="news_picture">新闻图片</string>
    <string name="news_news">新闻资讯</string>
    <string name="purchase">购买</string>
    <string name="front">正面</string>
    <string name="back">背面</string>
    <string name="item_name">手办</string>
    <string name="main_menu">HOME</string>
    <string name="menu">MENU</string>


    <string name="fragment_work_text_view">Work Fragment</string>
    <string name="fragment_setting_text_view">Setting Fragment</string>

    <string name="btn_start_service">Start Service</string>
    <string name="btn_stop_service">Stop Service</string>
    <string name="btn_bind_service">Bind Service</string>
    <string name="btn_unbind_service">Unbind Service</string>

</resources>
