<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Owen.activity.OwenTestServiceActivity">

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btn_start_service"
        android:layout_height="80dp"
        android:layout_width="match_parent"
        android:background="@drawable/bg_bubble_green"
        android:textSize="20sp"
        android:text="@string/btn_start_service"
        />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btn_stop_service"
        android:layout_height="80dp"
        android:layout_width="match_parent"
        android:background="@drawable/bg_bubble_green"
        android:textSize="20sp"
        android:text="@string/btn_stop_service"
        />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btn_bind_service"
        android:layout_height="80dp"
        android:layout_width="match_parent"
        android:background="@drawable/bg_bubble_green"
        android:textSize="20sp"
        android:text="@string/btn_bind_service"
        />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btn_unbind_service"
        android:layout_height="80dp"
        android:layout_width="match_parent"
        android:background="@drawable/bg_bubble_green"
        android:textSize="20sp"
        android:text="@string/btn_unbind_service"
        />

</LinearLayout>