<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"/>

    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_front"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/front1" />
        <TextView
            android:id="@+id/tv_front"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/front"
            android:textColor="@color/color_btn_bg_black"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/back1" />
        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/color_btn_bg_black"
            android:layout_gravity="center"/>
    </LinearLayout>

    <Button
        android:layout_marginLeft="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase"
        android:textColor="@color/color_btn_bg_white"
        android:background="@color/color_bg_red"
        android:layout_gravity="center"/>


</LinearLayout>