<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Stephanie.Aug2hwActivity">

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginStart="35dp"
        android:layout_width="650dp"
        android:layout_height="3dp"
        android:background="@color/color_bg_grey"
        >
        />
    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="35dp"
        android:orientation="horizontal"
        android:layout_width="650dp"
        android:layout_height="25dp"
        android:layout_marginTop="4dp"
        >
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/news_title"
            android:textColor="@color/color_blue1"
            android:textSize="22sp"
            />

        <TextView
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="@string/local_news" />

        <Button
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@color/color_blue1"
            android:text="@string/change_city"
            android:textColor="@color/color_btn_bg_white"
            android:textSize="12sp"
            >
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="650dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/color_bg_grey"
        android:layout_marginStart="35dp"
        >
     </LinearLayout>

    <LinearLayout
        android:layout_marginStart="35dp"
        android:layout_width="650dp"
        android:layout_height="25dp"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@color/color_bg_red"
            >
        </LinearLayout>

        <TextView
            android:layout_width="230dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/news"
            android:gravity=""
            />
        <LinearLayout
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="@color/color_blue1"
            >
        </LinearLayout>

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/news_picture"
            >
        </TextView>

        <LinearLayout
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="@color/color_blue1"
            android:layout_marginStart="70dp"
            >
        </LinearLayout>

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/news_news"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="35dp"
        android:layout_width="650dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>

